added SEC_QUERY class to make it easier to generate queries and look at the response

--- a/SEC_DATA.ipynb
+++ b/SEC_DATA.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,13 +23,42 @@
     "        \"query\": \"formType:\\\"10-k \\\" AND ticker:TSLA \",\n",
     "    }},\n",
     "    \"from\" : \"0\",\n",
-    "    \"size\": \"10\"\n",
+    "    \"size\": \"10\",\n",
+    "    \"sort\": [{\"filedAt\": {\"order\": \"desc\"}}]\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SEC_QUERY:\n",
+    "\n",
+    "    def __init__(self, form_type, ticker, size):\n",
+    "        self.form_type = form_type\n",
+    "        self.ticker = ticker\n",
+    "        self.size = size\n",
+    "        self.query = {\n",
+    "            \"query\": { \n",
+    "                \"query_string\" : {\n",
+    "                    \"query\": f\"formType:\\\"{self.form_type}\\\" AND ticker:{self.ticker}\",\n",
+    "                }\n",
+    "            },\n",
+    "            \"from\": \"0\",\n",
+    "            \"size\": size,\n",
+    "            \"sort\": [{\"filedAt\": {\"order\": \"desc\"}}]\n",
+    "        }\n",
+    "    \n",
+    "    def get_response(self, index:int):\n",
+    "        response = queryAPI.get_filings(self.query)\n",
+    "        return json.dumps(response[\"filings\"][index], indent=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -37,145 +66,130 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"id\": \"f921042a351771d1de8e1daeb849ed3b\",\n",
-      "  \"accessionNo\": \"0001564590-15-001031\",\n",
+      "  \"id\": \"56970a21a13f02964e72b512c6e8632e\",\n",
+      "  \"accessionNo\": \"0001628280-23-034847\",\n",
       "  \"cik\": \"1318605\",\n",
       "  \"ticker\": \"TSLA\",\n",
-      "  \"companyName\": \"TESLA MOTORS INC\",\n",
-      "  \"companyNameLong\": \"TESLA MOTORS INC (Filer)\",\n",
-      "  \"formType\": \"10-K\",\n",
-      "  \"description\": \"Form 10-K - Annual report [Section 13 and 15(d), not S-K Item 405]\",\n",
-      "  \"filedAt\": \"2015-02-26T17:13:26-05:00\",\n",
-      "  \"linkToTxt\": \"https://www.sec.gov/Archives/edgar/data/1318605/000156459015001031/0001564590-15-001031.txt\",\n",
-      "  \"linkToHtml\": \"https://www.sec.gov/Archives/edgar/data/1318605/0001564590-15-001031-index.htm\",\n",
+      "  \"companyName\": \"Tesla, Inc.\",\n",
+      "  \"companyNameLong\": \"Tesla, Inc. (Filer)\",\n",
+      "  \"formType\": \"10-Q\",\n",
+      "  \"description\": \"Form 10-Q - Quarterly report [Sections 13 or 15(d)]\",\n",
+      "  \"filedAt\": \"2023-10-20T18:41:03-04:00\",\n",
+      "  \"linkToTxt\": \"https://www.sec.gov/Archives/edgar/data/1318605/000162828023034847/0001628280-23-034847.txt\",\n",
+      "  \"linkToHtml\": \"https://www.sec.gov/Archives/edgar/data/1318605/000162828023034847/0001628280-23-034847-index.htm\",\n",
       "  \"linkToXbrl\": \"\",\n",
-      "  \"linkToFilingDetails\": \"https://www.sec.gov/Archives/edgar/data/1318605/000156459015001031/tsla-10k_20141231.htm\",\n",
+      "  \"linkToFilingDetails\": \"https://www.sec.gov/Archives/edgar/data/1318605/000162828023034847/tsla-20230930.htm\",\n",
       "  \"entities\": [\n",
       "    {\n",
-      "      \"companyName\": \"TESLA MOTORS INC (Filer)\",\n",
+      "      \"companyName\": \"Tesla, Inc. (Filer)\",\n",
       "      \"cik\": \"1318605\",\n",
       "      \"irsNo\": \"912197729\",\n",
       "      \"stateOfIncorporation\": \"DE\",\n",
       "      \"fiscalYearEnd\": \"1231\",\n",
-      "      \"type\": \"10-K\",\n",
+      "      \"type\": \"10-Q\",\n",
       "      \"act\": \"34\",\n",
       "      \"fileNo\": \"001-34756\",\n",
-      "      \"filmNo\": \"15653676\",\n",
+      "      \"filmNo\": \"231337998\",\n",
       "      \"sic\": \"3711 Motor Vehicles &amp; Passenger Car Bodies\"\n",
       "    }\n",
       "  ],\n",
       "  \"documentFormatFiles\": [\n",
       "    {\n",
       "      \"sequence\": \"1\",\n",
-      "      \"description\": \"10-K\",\n",
-      "      \"documentUrl\": \"https://www.sec.gov/Archives/edgar/data/1318605/000156459015001031/tsla-10k_20141231.htm\",\n",
-      "      \"type\": \"10-K\",\n",
-      "      \"size\": \"3660944\"\n",
+      "      \"description\": \"10-Q\",\n",
+      "      \"documentUrl\": \"https://www.sec.gov/ix?doc=/Archives/edgar/data/1318605/000162828023034847/tsla-20230930.htm\",\n",
+      "      \"type\": \"10-Q\",\n",
+      "      \"size\": \"1553218\"\n",
       "    },\n",
       "    {\n",
       "      \"sequence\": \"2\",\n",
-      "      \"description\": \"EX-12.1\",\n",
-      "      \"documentUrl\": \"https://www.sec.gov/Archives/edgar/data/1318605/000156459015001031/tsla-ex121_20141231536.htm\",\n",
-      "      \"type\": \"EX-12.1\",\n",
-      "      \"size\": \"17900\"\n",
+      "      \"description\": \"EX-10.1\",\n",
+      "      \"documentUrl\": \"https://www.sec.gov/Archives/edgar/data/1318605/000162828023034847/exhibit101.htm\",\n",
+      "      \"type\": \"EX-10.1\",\n",
+      "      \"size\": \"65306\"\n",
       "    },\n",
       "    {\n",
       "      \"sequence\": \"3\",\n",
-      "      \"description\": \"EX-23.1\",\n",
-      "      \"documentUrl\": \"https://www.sec.gov/Archives/edgar/data/1318605/000156459015001031/tsla-ex231_201412318.htm\",\n",
-      "      \"type\": \"EX-23.1\",\n",
-      "      \"size\": \"2502\"\n",
+      "      \"description\": \"EX-31.1\",\n",
+      "      \"documentUrl\": \"https://www.sec.gov/Archives/edgar/data/1318605/000162828023034847/tsla-2023x09x30xex311.htm\",\n",
+      "      \"type\": \"EX-31.1\",\n",
+      "      \"size\": \"10238\"\n",
       "    },\n",
       "    {\n",
       "      \"sequence\": \"4\",\n",
-      "      \"description\": \"EX-31.1\",\n",
-      "      \"documentUrl\": \"https://www.sec.gov/Archives/edgar/data/1318605/000156459015001031/tsla-ex311_201412319.htm\",\n",
-      "      \"type\": \"EX-31.1\",\n",
-      "      \"size\": \"15792\"\n",
+      "      \"description\": \"EX-31.2\",\n",
+      "      \"documentUrl\": \"https://www.sec.gov/Archives/edgar/data/1318605/000162828023034847/tsla-2023x09x30xex312.htm\",\n",
+      "      \"type\": \"EX-31.2\",\n",
+      "      \"size\": \"10217\"\n",
       "    },\n",
       "    {\n",
       "      \"sequence\": \"5\",\n",
-      "      \"description\": \"EX-31.2\",\n",
-      "      \"documentUrl\": \"https://www.sec.gov/Archives/edgar/data/1318605/000156459015001031/tsla-ex312_2014123110.htm\",\n",
-      "      \"type\": \"EX-31.2\",\n",
-      "      \"size\": \"15795\"\n",
-      "    },\n",
-      "    {\n",
-      "      \"sequence\": \"6\",\n",
       "      \"description\": \"EX-32.1\",\n",
-      "      \"documentUrl\": \"https://www.sec.gov/Archives/edgar/data/1318605/000156459015001031/tsla-ex321_2014123111.htm\",\n",
+      "      \"documentUrl\": \"https://www.sec.gov/Archives/edgar/data/1318605/000162828023034847/tsla-2023x09x30xex321.htm\",\n",
       "      \"type\": \"EX-32.1\",\n",
-      "      \"size\": \"11842\"\n",
-      "    },\n",
-      "    {\n",
-      "      \"sequence\": \"7\",\n",
-      "      \"description\": \"GRAPHIC\",\n",
-      "      \"documentUrl\": \"https://www.sec.gov/Archives/edgar/data/1318605/000156459015001031/g20150226192103829678.jpg\",\n",
-      "      \"type\": \"GRAPHIC\",\n",
-      "      \"size\": \"115617\"\n",
+      "      \"size\": \"6475\"\n",
       "    },\n",
       "    {\n",
       "      \"sequence\": \"\\u00a0\",\n",
       "      \"description\": \"Complete submission text file\",\n",
-      "      \"documentUrl\": \"https://www.sec.gov/Archives/edgar/data/1318605/000156459015001031/0001564590-15-001031.txt\",\n",
+      "      \"documentUrl\": \"https://www.sec.gov/Archives/edgar/data/1318605/000162828023034847/0001628280-23-034847.txt\",\n",
       "      \"type\": \"\\u00a0\",\n",
-      "      \"size\": \"20199065\"\n",
+      "      \"size\": \"8121386\"\n",
       "    }\n",
       "  ],\n",
       "  \"dataFiles\": [\n",
       "    {\n",
+      "      \"sequence\": \"6\",\n",
+      "      \"description\": \"XBRL TAXONOMY EXTENSION SCHEMA DOCUMENT\",\n",
+      "      \"documentUrl\": \"https://www.sec.gov/Archives/edgar/data/1318605/000162828023034847/tsla-20230930.xsd\",\n",
+      "      \"type\": \"EX-101.SCH\",\n",
+      "      \"size\": \"55944\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"sequence\": \"7\",\n",
+      "      \"description\": \"XBRL TAXONOMY EXTENSION CALCULATION LINKBASE DOCUMENT\",\n",
+      "      \"documentUrl\": \"https://www.sec.gov/Archives/edgar/data/1318605/000162828023034847/tsla-20230930_cal.xml\",\n",
+      "      \"type\": \"EX-101.CAL\",\n",
+      "      \"size\": \"85928\"\n",
+      "    },\n",
+      "    {\n",
       "      \"sequence\": \"8\",\n",
-      "      \"description\": \"XBRL INSTANCE DOCUMENT\",\n",
-      "      \"documentUrl\": \"https://www.sec.gov/Archives/edgar/data/1318605/000156459015001031/tsla-20141231.xml\",\n",
-      "      \"type\": \"EX-101.INS\",\n",
-      "      \"size\": \"3611344\"\n",
+      "      \"description\": \"XBRL TAXONOMY EXTENSION DEFINITION LINKBASE DOCUMENT\",\n",
+      "      \"documentUrl\": \"https://www.sec.gov/Archives/edgar/data/1318605/000162828023034847/tsla-20230930_def.xml\",\n",
+      "      \"type\": \"EX-101.DEF\",\n",
+      "      \"size\": \"265521\"\n",
       "    },\n",
       "    {\n",
       "      \"sequence\": \"9\",\n",
-      "      \"description\": \"XBRL TAXONOMY EXTENSION SCHEMA\",\n",
-      "      \"documentUrl\": \"https://www.sec.gov/Archives/edgar/data/1318605/000156459015001031/tsla-20141231.xsd\",\n",
-      "      \"type\": \"EX-101.SCH\",\n",
-      "      \"size\": \"87459\"\n",
+      "      \"description\": \"XBRL TAXONOMY EXTENSION LABEL LINKBASE DOCUMENT\",\n",
+      "      \"documentUrl\": \"https://www.sec.gov/Archives/edgar/data/1318605/000162828023034847/tsla-20230930_lab.xml\",\n",
+      "      \"type\": \"EX-101.LAB\",\n",
+      "      \"size\": \"666780\"\n",
       "    },\n",
       "    {\n",
       "      \"sequence\": \"10\",\n",
-      "      \"description\": \"XBRL TAXONOMY EXTENSION CALCULATION LINKBASE\",\n",
-      "      \"documentUrl\": \"https://www.sec.gov/Archives/edgar/data/1318605/000156459015001031/tsla-20141231_cal.xml\",\n",
-      "      \"type\": \"EX-101.CAL\",\n",
-      "      \"size\": \"90155\"\n",
-      "    },\n",
-      "    {\n",
-      "      \"sequence\": \"11\",\n",
-      "      \"description\": \"XBRL TAXONOMY EXTENSION DEFINITION LINKBASE\",\n",
-      "      \"documentUrl\": \"https://www.sec.gov/Archives/edgar/data/1318605/000156459015001031/tsla-20141231_def.xml\",\n",
-      "      \"type\": \"EX-101.DEF\",\n",
-      "      \"size\": \"285029\"\n",
-      "    },\n",
-      "    {\n",
-      "      \"sequence\": \"12\",\n",
-      "      \"description\": \"XBRL TAXONOMY EXTENSION LABEL LINKBASE\",\n",
-      "      \"documentUrl\": \"https://www.sec.gov/Archives/edgar/data/1318605/000156459015001031/tsla-20141231_lab.xml\",\n",
-      "      \"type\": \"EX-101.LAB\",\n",
-      "      \"size\": \"677096\"\n",
-      "    },\n",
-      "    {\n",
-      "      \"sequence\": \"13\",\n",
-      "      \"description\": \"XBRL TAXONOMY EXTENSION PRESENTATION LINKBASE\",\n",
-      "      \"documentUrl\": \"https://www.sec.gov/Archives/edgar/data/1318605/000156459015001031/tsla-20141231_pre.xml\",\n",
+      "      \"description\": \"XBRL TAXONOMY EXTENSION PRESENTATION LINKBASE DOCUMENT\",\n",
+      "      \"documentUrl\": \"https://www.sec.gov/Archives/edgar/data/1318605/000162828023034847/tsla-20230930_pre.xml\",\n",
       "      \"type\": \"EX-101.PRE\",\n",
-      "      \"size\": \"507576\"\n",
+      "      \"size\": \"433613\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"sequence\": \"72\",\n",
+      "      \"description\": \"EXTRACTED XBRL INSTANCE DOCUMENT\",\n",
+      "      \"documentUrl\": \"https://www.sec.gov/Archives/edgar/data/1318605/000162828023034847/tsla-20230930_htm.xml\",\n",
+      "      \"type\": \"XML\",\n",
+      "      \"size\": \"1328442\"\n",
       "    }\n",
       "  ],\n",
       "  \"seriesAndClassesContractsInformation\": [],\n",
-      "  \"periodOfReport\": \"2014-12-31\"\n",
+      "  \"periodOfReport\": \"2023-09-30\"\n",
       "}\n"
      ]
     }
    ],
    "source": [
-    "query\n",
-    "response = queryAPI.get_filings(query)\n",
-    "print(json.dumps(response[\"filings\"][9], indent=2))"
+    "query1 = SEC_QUERY(\"10-Q\", \"TSLA\", \"10\")\n",
+    "print(query1.get_response(0))"
    ]
   },
   {
