added some data frames

--- a/SEC_DATA.ipynb
+++ b/SEC_DATA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,8 +71,306 @@
     "init_query, f_url = query1.extract(0)\n",
     "\n",
     "# 10-K supported items [1, 1A, 1B, 2, 3, 4, 5, 6, 7, 7A, 8, 9, 9A, 9B, 10, 11, 12, 13, 14, 15]\n",
-    "section_text = extractorApi.get_section(f_url, \"8\", \"text\").split(' ')\n",
+    "section_text = extractorApi.get_section(f_url, \"8\", \"text\")\n",
     "section_html = extractorApi.get_section(f_url, \"8\", 'html')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RevenueFromContractWithCustomerExcludingAssessedTax</th>\n",
+       "      <th>CostOfRevenue</th>\n",
+       "      <th>GrossProfit</th>\n",
+       "      <th>ResearchAndDevelopmentExpense</th>\n",
+       "      <th>SellingGeneralAndAdministrativeExpense</th>\n",
+       "      <th>RestructuringAndOtherExpenses</th>\n",
+       "      <th>OperatingExpenses</th>\n",
+       "      <th>OperatingIncomeLoss</th>\n",
+       "      <th>InvestmentIncomeInterest</th>\n",
+       "      <th>InterestExpense</th>\n",
+       "      <th>OtherNonoperatingIncomeExpense</th>\n",
+       "      <th>IncomeLossFromContinuingOperationsBeforeIncomeTaxesExtraordinaryItemsNoncontrollingInterest</th>\n",
+       "      <th>IncomeTaxExpenseBenefit</th>\n",
+       "      <th>ProfitLoss</th>\n",
+       "      <th>NetIncomeLossAttributableToNoncontrollingInterest</th>\n",
+       "      <th>NetIncomeLoss</th>\n",
+       "      <th>EarningsPerShareBasic</th>\n",
+       "      <th>EarningsPerShareDiluted</th>\n",
+       "      <th>WeightedAverageNumberOfSharesOutstandingBasic</th>\n",
+       "      <th>WeightedAverageNumberOfDilutedSharesOutstanding</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>78509000000</td>\n",
+       "      <td>65121000000</td>\n",
+       "      <td>17660000000</td>\n",
+       "      <td>3969000000</td>\n",
+       "      <td>4800000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8769000000</td>\n",
+       "      <td>8891000000</td>\n",
+       "      <td>1066000000</td>\n",
+       "      <td>156000000</td>\n",
+       "      <td>172000000</td>\n",
+       "      <td>9973000000</td>\n",
+       "      <td>-5001000000</td>\n",
+       "      <td>14974000000</td>\n",
+       "      <td>-23000000</td>\n",
+       "      <td>14997000000</td>\n",
+       "      <td>4.73</td>\n",
+       "      <td>4.30</td>\n",
+       "      <td>3174000000</td>\n",
+       "      <td>3485000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>67210000000</td>\n",
+       "      <td>49599000000</td>\n",
+       "      <td>20853000000</td>\n",
+       "      <td>3075000000</td>\n",
+       "      <td>3946000000</td>\n",
+       "      <td>176000000</td>\n",
+       "      <td>7197000000</td>\n",
+       "      <td>13656000000</td>\n",
+       "      <td>297000000</td>\n",
+       "      <td>191000000</td>\n",
+       "      <td>-43000000</td>\n",
+       "      <td>13719000000</td>\n",
+       "      <td>1132000000</td>\n",
+       "      <td>12587000000</td>\n",
+       "      <td>31000000</td>\n",
+       "      <td>12556000000</td>\n",
+       "      <td>4.02</td>\n",
+       "      <td>3.62</td>\n",
+       "      <td>3130000000</td>\n",
+       "      <td>3475000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>44125000000</td>\n",
+       "      <td>32415000000</td>\n",
+       "      <td>13606000000</td>\n",
+       "      <td>2593000000</td>\n",
+       "      <td>4517000000</td>\n",
+       "      <td>-27000000</td>\n",
+       "      <td>7083000000</td>\n",
+       "      <td>6523000000</td>\n",
+       "      <td>56000000</td>\n",
+       "      <td>371000000</td>\n",
+       "      <td>135000000</td>\n",
+       "      <td>6343000000</td>\n",
+       "      <td>699000000</td>\n",
+       "      <td>5644000000</td>\n",
+       "      <td>125000000</td>\n",
+       "      <td>5519000000</td>\n",
+       "      <td>1.87</td>\n",
+       "      <td>1.63</td>\n",
+       "      <td>2959000000</td>\n",
+       "      <td>3386000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  RevenueFromContractWithCustomerExcludingAssessedTax CostOfRevenue  \\\n",
+       "0                                        78509000000    65121000000   \n",
+       "1                                        67210000000    49599000000   \n",
+       "2                                        44125000000    32415000000   \n",
+       "\n",
+       "   GrossProfit ResearchAndDevelopmentExpense  \\\n",
+       "0  17660000000                    3969000000   \n",
+       "1  20853000000                    3075000000   \n",
+       "2  13606000000                    2593000000   \n",
+       "\n",
+       "  SellingGeneralAndAdministrativeExpense RestructuringAndOtherExpenses  \\\n",
+       "0                             4800000000                             0   \n",
+       "1                             3946000000                     176000000   \n",
+       "2                             4517000000                     -27000000   \n",
+       "\n",
+       "  OperatingExpenses OperatingIncomeLoss InvestmentIncomeInterest  \\\n",
+       "0        8769000000          8891000000               1066000000   \n",
+       "1        7197000000         13656000000                297000000   \n",
+       "2        7083000000          6523000000                 56000000   \n",
+       "\n",
+       "  InterestExpense OtherNonoperatingIncomeExpense  \\\n",
+       "0       156000000                      172000000   \n",
+       "1       191000000                      -43000000   \n",
+       "2       371000000                      135000000   \n",
+       "\n",
+       "  IncomeLossFromContinuingOperationsBeforeIncomeTaxesExtraordinaryItemsNoncontrollingInterest  \\\n",
+       "0                                         9973000000                                            \n",
+       "1                                        13719000000                                            \n",
+       "2                                         6343000000                                            \n",
+       "\n",
+       "  IncomeTaxExpenseBenefit   ProfitLoss  \\\n",
+       "0             -5001000000  14974000000   \n",
+       "1              1132000000  12587000000   \n",
+       "2               699000000   5644000000   \n",
+       "\n",
+       "  NetIncomeLossAttributableToNoncontrollingInterest NetIncomeLoss  \\\n",
+       "0                                         -23000000   14997000000   \n",
+       "1                                          31000000   12556000000   \n",
+       "2                                         125000000    5519000000   \n",
+       "\n",
+       "  EarningsPerShareBasic EarningsPerShareDiluted  \\\n",
+       "0                  4.73                    4.30   \n",
+       "1                  4.02                    3.62   \n",
+       "2                  1.87                    1.63   \n",
+       "\n",
+       "  WeightedAverageNumberOfSharesOutstandingBasic  \\\n",
+       "0                                    3174000000   \n",
+       "1                                    3130000000   \n",
+       "2                                    2959000000   \n",
+       "\n",
+       "  WeightedAverageNumberOfDilutedSharesOutstanding  \n",
+       "0                                      3485000000  \n",
+       "1                                      3475000000  \n",
+       "2                                      3386000000  "
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv = init_query['StatementsOfIncome']\n",
+    "columns = list(csv.keys())\n",
+    "#values = [[entry.get('value', None) for entry in entry_list] for entry_list in csv.values()]\n",
+    "values = []\n",
+    "\n",
+    "for entry_list in csv.values():\n",
+    "    entry_values = [entry.get('value', None) for entry in entry_list]\n",
+    "    values.append(entry_values)\n",
+    "\n",
+    "values_transposed = list(map(list, zip(*values)))\n",
+    "\n",
+    "df_income = pd.DataFrame(values_transposed, columns=columns)\n",
+    "df_income"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pprint(text, line_length=100):\n",
+    "    words = text.split(' ')\n",
+    "    lines = []\n",
+    "    current_line = ' '\n",
+    "    for word in words:\n",
+    "        if len(current_line + ' '+ word) <= line_length:\n",
+    "            current_line += ' '+word\n",
+    "        else:\n",
+    "            lines.append(current_line.strip())\n",
+    "            current_line = word\n",
+    "    if current_line:\n",
+    "        lines.append(current_line.strip())\n",
+    "    print('\\n'.join(lines))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ITEM 8. FINANCIAL STATEMENTS AND SUPPLEMENTARY DATA \n",
+      "\n",
+      "Index to Consolidated Financial Statements\n",
+      "##TABLE_START Page \n",
+      "\n",
+      "Report of Independent Registered Public Accounting Firm (PCAOB ID: 238 )\n",
+      "Consolidated Balance Sheets \n",
+      "\n",
+      "Consolidated Statements of Operations \n",
+      "\n",
+      "Consolidated Statements of\n",
+      "Comprehensive Income \n",
+      "\n",
+      "Consolidated Statements of Redeemable Noncontrolling Interests and Equity\n",
+      "Consolidated Statements of Cash Flows \n",
+      "\n",
+      "Notes to Consolidated Financial Statements\n",
+      "##TABLE_END\n",
+      "\n",
+      "Report of Independent Registered Public Accounting Firm \n",
+      "\n",
+      "To the Board of Directors\n",
+      "and Stockholders of Tesla, Inc. \n",
+      "\n",
+      "Opinions on the Financial Statements and Internal Control over\n",
+      "Financial Reporting \n",
+      "\n",
+      "We have audited the accompanying consolidated balance sheets of Tesla, Inc.\n",
+      "and its subsidiaries (the &#8220;Company&#8221;) as of December 31, 2023 and 2022, and the related\n",
+      "consolidated statements of operations, of comprehensive income, of redeemable noncontrolling\n",
+      "interests and equity and of cash flows for each of the three years in the period ended December 31,\n",
+      "2023, including the related notes (collectively referred to as the &#8220;consolidated financial\n",
+      "statements&#8221;). We also have audited the Company's internal control over financial reporting as\n",
+      "of December 31, 2023, based on criteria established in Internal Control - Integrated Framework\n",
+      "(2013) issued by the Committee of Sponsoring Organizations of the Treadway Commission (COSO). \n",
+      "\n",
+      "In\n",
+      "our opinion, the consolidated financial statements referred to above present fairly, in all material\n",
+      "respects, the financial position of the Company as of December 31, 2023 and 2022, and the results of\n",
+      "its operations and its cash flows for each of the three years in the period ended December 31, 2023\n",
+      "in conformity with accounting principles generally accepted in the United States of America. Also in\n",
+      "our opinion, the Company maintained, in all material respects, effective internal control over\n",
+      "financial reporting as of December 31, 2023, based on criteria established in Internal Control -\n",
+      "Integrated Framework (2013) issued by the COSO. \n",
+      "\n",
+      "Changes in Accounting Principles \n",
+      "\n",
+      "As discussed in\n",
+      "Note 2 to the consolidated financial statements, the Company changed the manner in which it accounts\n",
+      "for convertible debt in 2021. \n",
+      "\n",
+      "Basis for Opinions \n",
+      "\n",
+      "The Company's management is responsible for\n",
+      "these consolidated financial statements, for maintaining effective internal control over financial\n",
+      "reporting, and for its assessment of the effectiveness of internal control over financial reporting,\n",
+      "included in Management&#8217;s Report on Internal Control over Financial Reporting appearing under\n",
+      "Item 9A. Our responsibility is to express opinions on the Company&#8217;s consolidated financial\n",
+      "statements and on the Company's internal control over financial reporting based on our audits. We\n",
+      "are a public accounting firm registered with the Public Company Accounting Oversight Board (United\n",
+      "States) (PCAOB) and are required to be independent with respe\n"
+     ]
+    }
+   ],
+   "source": [
+    "pprint(section_text[0:3000])"
    ]
   },
   {
