--- a/SEC_DATA.ipynb
+++ b/SEC_DATA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,15 +12,19 @@
     "import pandas as pd\n",
     "from IPython.display import display, HTML\n",
     "import time\n",
+    "#from openai import OpenAI\n",
+    "import tiktoken\n",
+    "import os\n",
     "from openai import OpenAI\n",
     "\n",
     "queryAPI = QueryApi(api_key='041c38e656c459b1b336a7bea7d83c057482f669d2e663a1b6fa8864b2071550')\n",
-    "extractorApi = ExtractorApi(api_key='041c38e656c459b1b336a7bea7d83c057482f669d2e663a1b6fa8864b2071550')"
+    "extractorApi = ExtractorApi(api_key='041c38e656c459b1b336a7bea7d83c057482f669d2e663a1b6fa8864b2071550')\n",
+    "OpenAI.api_key = os.getenv(\"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\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +267,7 @@
        "2                                      3386000000  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +536,7 @@
        "WeightedAverageNumberOfDilutedSharesOutstanding               3386000000  "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +897,7 @@
        "LiabilitiesAndStockholdersEquity                    106618000000  "
       ]
      },
-     "execution_count": 104,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,40 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['0001628280-24-002390',\n",
-       " '0000950170-23-001409',\n",
-       " '0001564590-22-016871',\n",
-       " '0000950170-22-000796',\n",
-       " '0001564590-21-022604',\n",
-       " '0001564590-21-004599',\n",
-       " '0001564590-20-018984',\n",
-       " '0001564590-20-004475',\n",
-       " '0001564590-19-003165',\n",
-       " '0001564590-18-002956']"
-      ]
-     },
-     "execution_count": 118,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "query_file = query1.get_filing(0)\n",
-    "acc_num = []\n",
-    "\n",
-    "for filing in query_file['filings']:\n",
-    "    acc_num.append(filing['accessionNo'])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,6 +926,77 @@
     "    if current_line:\n",
     "        lines.append(current_line.strip())\n",
     "    print('\\n'.join(lines))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def send(prompt=None, text_data=None, chat_model='\"gpt-3.5', model_token_limit=8192, max_tokens=2500):\n",
+    "    if not prompt:\n",
+    "        return \"Error: Prompt is missing\"\n",
+    "    if not text_data:\n",
+    "        return \"Error Text data is missing\"\n",
+    "    \n",
+    "    tokenizer = tiktoken.encoding_for_model(chat_model)\n",
+    "    token_int =  tokenizer.encode(text_data)\n",
+    "\n",
+    "    chunk_size = max_tokens - len(tokenizer.encode(prompt))\n",
+    "    chunks = [token_int[i: i+ chunk_size] for i in range(0, len(token_int), chunk_size)]\n",
+    "\n",
+    "    #Decode back into string\n",
+    "    chunks = [tokenizer.decode(chunk) for chunk in chunks]\n",
+    "\n",
+    "    responses = []\n",
+    "    messages = [\n",
+    "        {\"role\":\"user\", \"content\": prompt},\n",
+    "        {\n",
+    "            \"role\":\"user\",\n",
+    "            \"content\": \"To provide the context for the above prompt, I will send you text in parts. When I am finished, I will tell you 'ALL PARTS SENT'. Do not answer until you have received all the parts. \"\n",
+    "        }\n",
+    "    ]\n",
+    "\n",
+    "    for chunk in chunks:\n",
+    "        messages.append({\"role\":\"user\", \"content\": chunk})\n",
+    "        #Check if total tokens exceed the model's limit and remove oldest chunk if necessary\n",
+    "        while (sum(len(tokenizer.encode(msg[\"content\"]))for msg in messages) > model_token_limit):\n",
+    "            messages.pop(1) #remove oldest chunk\n",
+    "        \n",
+    "        response = openai.ChatCompletion.create(model=chat_model, messages=messages)\n",
+    "        chatgpt_response = response.choice[0].message[\"content\"].strip()\n",
+    "        responses.append(chatgpt_response)\n",
+    "    \n",
+    "    messages.append({\"role\": \"user\", \"content\": \"ALL PARTS SENT\"})\n",
+    "    resposnse = openai.ChatCompletion.create(model=chat_model, messages=messages)\n",
+    "    final_response = response.choices[0].message[\"content\"].strip()\n",
+    "    responses.append(final_response)\n",
+    "    return responses\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Could not automatically map \"gpt-3.5 to a tokeniser. Please use `tiktoken.get_encoding` to explicitly get the tokeniser you expect.'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[27], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m send(prompt \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSummarize the following text for me\u001b[39m\u001b[38;5;124m\"\u001b[39m, text_data\u001b[38;5;241m=\u001b[39msection_text)\n",
+      "Cell \u001b[1;32mIn[26], line 7\u001b[0m, in \u001b[0;36msend\u001b[1;34m(prompt, text_data, chat_model, model_token_limit, max_tokens)\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m text_data:\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mError Text data is missing\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m----> 7\u001b[0m tokenizer \u001b[38;5;241m=\u001b[39m tiktoken\u001b[38;5;241m.\u001b[39mencoding_for_model(chat_model)\n\u001b[0;32m      8\u001b[0m token_int \u001b[38;5;241m=\u001b[39m  tokenizer\u001b[38;5;241m.\u001b[39mencode(text_data)\n\u001b[0;32m     10\u001b[0m chunk_size \u001b[38;5;241m=\u001b[39m max_tokens \u001b[38;5;241m-\u001b[39m \u001b[38;5;28mlen\u001b[39m(tokenizer\u001b[38;5;241m.\u001b[39mencode(prompt))\n",
+      "File \u001b[1;32mc:\\Users\\Owner\\anaconda3\\Lib\\site-packages\\tiktoken\\model.py:101\u001b[0m, in \u001b[0;36mencoding_for_model\u001b[1;34m(model_name)\u001b[0m\n\u001b[0;32m     96\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mencoding_for_model\u001b[39m(model_name: \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Encoding:\n\u001b[0;32m     97\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Returns the encoding used by a model.\u001b[39;00m\n\u001b[0;32m     98\u001b[0m \n\u001b[0;32m     99\u001b[0m \u001b[38;5;124;03m    Raises a KeyError if the model name is not recognised.\u001b[39;00m\n\u001b[0;32m    100\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m get_encoding(encoding_name_for_model(model_name))\n",
+      "File \u001b[1;32mc:\\Users\\Owner\\anaconda3\\Lib\\site-packages\\tiktoken\\model.py:88\u001b[0m, in \u001b[0;36mencoding_name_for_model\u001b[1;34m(model_name)\u001b[0m\n\u001b[0;32m     85\u001b[0m             \u001b[38;5;28;01mreturn\u001b[39;00m model_encoding_name\n\u001b[0;32m     87\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m encoding_name \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m---> 88\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\n\u001b[0;32m     89\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCould not automatically map \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmodel_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m to a tokeniser. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     90\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPlease use `tiktoken.get_encoding` to explicitly get the tokeniser you expect.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     91\u001b[0m     ) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m     93\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m encoding_name\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'Could not automatically map \"gpt-3.5 to a tokeniser. Please use `tiktoken.get_encoding` to explicitly get the tokeniser you expect.'"
+     ]
+    }
+   ],
+   "source": [
+    "send(prompt = \"Summarize the following text for me\", text_data=section_text)"
    ]
   },
   {
