--- a/SEC_DATA.ipynb
+++ b/SEC_DATA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,6 +89,20 @@
     "section_text = extractorApi.get_section(f_url, \"1\", \"text\")\n",
     "section_text2 = extractorApi.get_section(f_url,\"1B\" ,\"text\")\n",
     "#section_html = extractorApi.get_section(f_url, \"8\", 'html')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categories = [\"1\",\"1A\", \"1B\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"7A\", \"8\", \"9\", \"9A\", \"9B\", \"10\", \"11\", \"12\", \"13\", \"14\", \"15\"]\n",
+    "def write_txt(ticker:str, categories):\n",
+    "    for cat in categories:\n",
+    "        section = extractorApi.get_section(f_url, cat, \"text\")\n",
+    "        with open(\"SEC_\"+ticker+\"_\"+cat, \"w\") as fr:\n",
+    "            fr.write(section)"
    ]
   },
   {
